# load-balancing-app

./: .gitignore  README.md  go.work
admission_control_xapp/: Dockerfile  admission_control.py  build.sh
admission_control_xapp/init/: config-file.json  routes.txt
client/: client.go  go.mod
datamodel/: go.mod  intent.go  intent_builder.go  intent_messages.go  intent_parameters.go
documentation/: architecture.md
documentation/images/: CreateIntent.plantuml  IntentToAdmissionControl.plantuml  ListIntents.plantuml  RetrieveIntent.plantuml  components.eps  components.plantuml  components_set.plantuml  work.plantuml
experiments/: .gitignore  Dockerfile.admission-control-xapp  Dockerfile.base-packages  Dockerfile.e2node  Dockerfile.intentctl  Dockerfile.ipython  Dockerfile.sbrc-24  README.md  build_all.sh  experiment.yaml  mergedata.py  setup_experiment.sh  start_pod.sh  test.sh
experiments/e2sim_experiment_1/: Dockerfile  experiment.py
experiments/e2sim_experiment_2/: config.yaml  connections.py  controllers.py  environment_manager.py  experiment.py  simple_server.py
experiments/intent/: Dockerfile.generator  generate_grpc.sh  intent.grpc.pb.cc  intent.grpc.pb.h  intent.pb.cc  intent.pb.h  intent.proto
experiments/intentctl/: CMakeLists.txt  intentctl.cpp
experiments/results/: acceptance.plot  (+9 more)
experiments/simulator/: CMakeLists.txt  Dockerfile  simulator.cpp
intentctl/: .gitignore  README.md  go.mod  main.go
intentstore/: go.mod  interface.go  memorytable.go
lbctl/: .gitignore  go.mod  main.go
smoapp/: .gitignore  go.mod  go.sum  lb_smoapp.go
(+20 files in other folders)
